// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ranking golden (max-yield) > produces stable top-N ordering per scenario under max-yield 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hsbc-premier",
    "indusind-eazydiner",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "indusind-eazydiner-platinum",
    "amex-platinum-travel",
    "hdfc-regalia-gold",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-gold",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "amex-smartearn",
    "amex-platinum-reserve",
    "axis-magnus",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "hdfc-phonepe-ultimo",
    "sbi-card-pulse",
    "hdfc-marriott-bonvoy",
    "sc-rewards",
    "hdfc-infinia-metal",
    "axis-ace",
    "hsbc-premier",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "axis-fibe",
    "yes-first-preferred",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "icici-adani-one-signature",
    "krisflyer-sbi-apex",
    "sc-ultimate",
    "aurum-sbi",
    "idfc-mayura",
    "amex-platinum-travel",
    "equitas-powermiles",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-privilege",
    "axis-flipkart",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "hsbc-premier",
    "yes-marquee",
    "idfc-ashva",
    "bobcard-etihad-guest",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "au-ixigo",
    "idfc-mayura",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "rbl-world-safari",
    "idfc-wow",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "kotak-solitaire",
    "yes-marquee",
    "kotak-white-reserve",
    "sc-beyond",
    "idfc-mayura",
    "axis-reserve",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "au-ixigo",
    "axis-magnus",
    "kotak-solitaire",
    "bobcard-etihad-guest-premium",
  ],
  "issuer-amex": [
    "amex-gold",
    "amex-membership-rewards",
    "amex-platinum-travel",
    "amex-smartearn",
    "amex-platinum-reserve",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-airtel",
    "axis-flipkart-super-elite",
    "axis-ace",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-privilege-easy",
    "axis-fibe",
    "axis-flipkart",
    "axis-cashback",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-diners-club-privilege",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-shoppers-stop-black",
    "hdfc-shoppers-stop",
    "hdfc-phonepe-ultimo",
    "hdfc-millennia",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-coral-rupay",
    "icici-adani-one-signature",
    "icici-coral",
    "icici-amazon-pay",
    "icici-hpcl-super-saver",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "sbi-card-pulse",
    "krisflyer-sbi-apex",
    "sbi-cashback",
    "reliance-sbi-prime",
    "indigo-sbi-elite",
    "sbi-card-prime",
    "titan-sbi",
    "phonepe-sbi-purple",
    "sbi-card-miles-elite",
    "sbi-card-elite",
    "tata-neu-infinity-sbi",
  ],
  "lifetime-free": [
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
    "yes-paisabazaar-paisasave-rupay",
    "axis-kwik",
    "federal-signet",
  ],
  "lounge": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "equitas-selfe",
  ],
  "lounge-query": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "hdfc-diners-club-black-metal",
    "sc-ultimate",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "equitas-selfe",
    "au-ixigo",
  ],
  "max-fee-5000-query": [
    "kotak-infinite",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "indusind-eazydiner",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "equitas-selfe",
    "au-ixigo",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
  ],
  "max-fee-zero": [
    "kotak-infinite",
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "kotak-solitaire",
    "yes-kiwi",
    "hsbc-visa-platinum",
    "csb-jupiter-edge-plus",
    "axis-fibe",
    "icici-amazon-pay",
    "hsbc-rupay-platinum",
    "indusind-tiger",
    "federal-imperio",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "amex-smartearn",
    "cheq-au",
    "hdfc-moneyback-plus",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "axis-samsung-signature",
    "flipkart-sbi",
    "axis-flipkart",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "axis-select",
    "hsbc-rupay-cashback",
    "axis-my-zone",
    "sc-digismart",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-shoppers-stop",
    "yes-kiwi",
    "sbi-cashback",
    "axis-airtel",
    "hdfc-swiggy-black",
    "rbl-platinum-delight",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "amex-gold",
    "yes-marquee",
    "sbi-card-prime",
    "sbi-card-elite",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "axis-reserve",
    "amex-platinum-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "kotak-infinite",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "amex-gold",
    "amex-membership-rewards",
    "indusind-eazydiner",
    "hsbc-travelone",
    "hdfc-infinia-metal",
    "sc-ultimate",
    "hdfc-regalia-gold",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "au-ixigo",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "bobcard-eterna",
    "idfc-mayura",
    "icici-times-black",
    "rbl-world-safari",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hdfc-diners-club-black-metal",
    "amex-membership-rewards",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "hdfc-infinia-metal",
  ],
  "spend-level-light": [
    "kotak-infinite",
    "icici-emeralde-private-metal",
    "amex-gold",
    "hsbc-premier",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
  ],
  "spend-level-mid": [
    "kotak-infinite",
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "amex-gold",
    "amex-membership-rewards",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "sc-ultimate",
    "indusind-eazydiner",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "kotak-infinite",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "amex-gold",
    "amex-membership-rewards",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "axis-magnus",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "yes-kiwi",
    "hsbc-live-plus",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-swiggy-orange",
    "sbi-cashback",
    "hsbc-rupay-cashback",
    "titan-sbi",
    "phonepe-sbi-purple",
    "hdfc-phonepe-ultimo",
    "axis-ace",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hdfc-swiggy-orange",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "hdfc-swiggy-black",
    "axis-airtel",
    "hdfc-marriott-bonvoy",
    "yes-paisabazaar-paisasave",
    "bobcard-eterna",
    "axis-fibe",
    "yes-first-preferred",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "au-ixigo",
    "hdfc-marriott-bonvoy",
    "hsbc-live-plus",
    "hdfc-diners-club-privilege",
    "sbi-cashback",
    "yes-marquee",
    "hsbc-rupay-cashback",
    "bobcard-eterna",
    "rbl-world-max",
    "sbi-card-prime",
  ],
  "usecase-fuel": [
    "bpcl-sbi-octane",
    "idfc-first-power-plus",
    "axis-indianoil-easy",
    "hdfc-indianoil",
    "idfc-first-power",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "axis-indianoil",
    "axis-indianoil-premium",
    "icici-hpcl-super-saver",
    "idfc-first-earn",
    "sc-platinum-rewards",
  ],
  "usecase-grocery": [
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-rupay-cashback",
    "indusind-eazydiner",
    "au-ixigo",
    "kotak-cashback-plus",
    "rbl-shoprite",
    "bpcl-sbi-octane",
    "phonepe-sbi-select-black",
    "sbi-card-prime",
    "sbi-cashback",
  ],
  "usecase-online": [
    "indusind-eazydiner",
    "csb-jupiter-edge-plus",
    "phonepe-sbi-select-black",
    "sbi-cashback",
    "kotak-cashback-plus",
    "axis-cashback",
    "au-ixigo",
    "hdfc-pixel-play",
    "bobcard-eterna",
    "axis-fibe",
    "yes-marquee",
    "yes-reserv",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
}
`;

exports[`ranking golden (representative queries) > produces stable top-N ordering per scenario 1`] = `
{
  "broad-generic": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "kotak-solitaire",
    "axis-magnus",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
  ],
  "category-bill-payments": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-indianoil",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
  ],
  "category-education-payments": [
    "icici-emeralde-private-metal",
    "hsbc-premier",
    "amex-membership-rewards",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "amex-gold",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "amex-platinum-travel",
    "indusind-eazydiner-platinum",
    "hdfc-marriott-bonvoy",
    "hdfc-tata-neu-infinity",
  ],
  "category-rent": [
    "hsbc-premier",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-smartearn",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-rent-payment": [
    "hsbc-premier",
    "amex-platinum-travel",
    "amex-membership-rewards",
    "sc-ultimate",
    "amex-gold",
    "axis-magnus-burgundy",
    "axis-magnus",
    "amex-smartearn",
    "amex-platinum-reserve",
    "sc-beyond",
    "amex-platinum",
  ],
  "category-utilities": [
    "icici-emeralde-private-metal",
    "sc-ultimate",
    "amex-gold",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "hdfc-phonepe-ultimo",
    "indusind-eazydiner",
    "sbi-card-prime",
    "hdfc-marriott-bonvoy",
    "sbi-card-pulse",
    "sc-rewards",
    "indusind-eazydiner-platinum",
  ],
  "category-utility-bills": [
    "icici-emeralde-private-metal",
    "sbi-card-prime",
    "sc-ultimate",
    "axis-ace",
    "amex-gold",
    "bobcard-hpcl-energie",
    "phonepe-sbi-select-black",
    "hdfc-infinia-metal",
    "idfc-first-power",
    "bobcard-select",
    "cheq-au",
    "yes-ace",
  ],
  "combo-dining-under-5000": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "bobcard-eterna",
    "yes-first-preferred",
    "sbi-card-prime",
    "hsbc-rupay-cashback",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "rbl-icon",
  ],
  "combo-premium-travel": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "icici-adani-one-signature",
    "krisflyer-sbi-apex",
    "sc-ultimate",
    "aurum-sbi",
    "idfc-mayura",
    "amex-platinum-travel",
    "equitas-powermiles",
    "rbl-icon",
    "indusind-celesta",
  ],
  "exact-card-atlas": [
    "axis-atlas",
    "axis-magnus-burgundy",
    "axis-airtel",
    "axis-horizon",
    "axis-magnus",
    "axis-ace",
    "axis-indigo-premium",
    "axis-fibe",
    "axis-privilege-easy",
    "axis-rewards",
    "axis-privilege",
    "axis-flipkart",
  ],
  "forex": [
    "bobcard-etihad-guest-premium",
    "au-ixigo",
    "idfc-mayura",
    "rbl-world-safari",
    "idfc-wow",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "hsbc-premier",
    "yes-marquee",
    "idfc-ashva",
    "bobcard-etihad-guest",
  ],
  "forex-zero": [
    "bobcard-etihad-guest-premium",
    "au-ixigo",
    "idfc-mayura",
    "scapia-federal",
    "scapia-bobcard",
    "kotak-solitaire",
    "rbl-world-safari",
    "idfc-wow",
    "indusind-pioneer-heritage-metal",
  ],
  "guest-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "sc-beyond",
    "idfc-mayura",
  ],
  "intl-lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "axis-magnus",
    "yes-marquee",
    "kotak-solitaire",
    "kotak-white-reserve",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "axis-reserve",
    "icici-times-black",
    "aurum-sbi",
    "sc-beyond",
  ],
  "issuer-amex": [
    "amex-platinum-travel",
    "amex-membership-rewards",
    "amex-gold",
    "amex-platinum-reserve",
    "amex-smartearn",
    "amex-platinum",
  ],
  "issuer-axis": [
    "axis-magnus-burgundy",
    "axis-atlas",
    "axis-magnus",
    "axis-flipkart-super-elite",
    "axis-airtel",
    "axis-horizon",
    "axis-indigo-premium",
    "axis-cashback",
    "axis-ace",
    "axis-flipkart",
    "axis-samsung-signature",
    "axis-fibe",
  ],
  "issuer-hdfc": [
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "hdfc-swiggy",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "hdfc-tata-neu-infinity",
    "hdfc-phonepe-ultimo",
    "hdfc-shoppers-stop-black",
    "hdfc-pixel-play",
  ],
  "issuer-icici": [
    "icici-emeralde-private-metal",
    "icici-times-black",
    "icici-adani-one-signature",
    "icici-amazon-pay",
    "icici-adani-one-platinum",
    "icici-makemytrip",
    "icici-coral-rupay",
    "icici-sapphiro",
    "icici-emeralde",
    "icici-coral",
    "icici-sapphiro-rupay",
    "icici-rubyx",
  ],
  "issuer-sbi": [
    "phonepe-sbi-select-black",
    "krisflyer-sbi-apex",
    "tata-neu-infinity-sbi",
    "indigo-sbi-elite",
    "aurum-sbi",
    "sbi-card-miles-elite",
    "titan-sbi",
    "sbi-card-prime",
    "sbi-card-elite",
    "sbi-cashback",
    "sbi-card-miles-prime",
    "irctc-rupay-sbi",
  ],
  "lifetime-free": [
    "hsbc-visa-platinum",
    "au-ixigo",
    "yes-kiwi",
    "indusind-tiger",
    "axis-fibe",
    "csb-jupiter-edge-plus",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
    "federal-imperio",
    "federal-signet",
    "yes-paisabazaar-paisasave-rupay",
  ],
  "lounge": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-reserve",
    "axis-magnus",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "lounge-query": [
    "hsbc-premier",
    "axis-magnus-burgundy",
    "kotak-white-reserve",
    "kotak-solitaire",
    "axis-magnus",
    "axis-reserve",
    "yes-marquee",
    "hdfc-diners-club-black-metal",
    "hdfc-infinia-metal",
    "sc-beyond",
    "icici-times-black",
    "amex-platinum",
  ],
  "max-fee-5000-query": [
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "equitas-selfe",
    "kotak-solitaire",
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "bobcard-etihad-guest-premium",
    "sc-ultimate",
    "amex-platinum-travel",
    "equitas-powermiles",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
  ],
  "max-fee-zero": [
    "kotak-solitaire",
    "hsbc-visa-platinum",
    "au-ixigo",
    "yes-kiwi",
    "indusind-tiger",
    "icici-amazon-pay",
    "axis-fibe",
    "csb-jupiter-edge-plus",
    "kotak-infinite",
    "indusind-eazydiner-platinum",
    "hsbc-rupay-platinum",
    "axis-kwik",
  ],
  "merchant-amazon": [
    "icici-amazon-pay",
    "hdfc-moneyback-plus",
    "amex-smartearn",
    "cheq-au",
  ],
  "merchant-flipkart": [
    "axis-flipkart-super-elite",
    "flipkart-sbi",
    "axis-flipkart",
    "axis-samsung-signature",
    "cheq-au",
    "axis-neo",
  ],
  "merchant-swiggy": [
    "hdfc-swiggy",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-diners-club-privilege",
    "axis-fibe",
    "hsbc-live-plus",
    "axis-rewards",
    "axis-ace",
    "axis-select",
    "hsbc-rupay-cashback",
    "axis-my-zone",
    "sc-digismart",
  ],
  "network-mastercard": [
    "hsbc-premier",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "sc-ultimate",
    "sbi-card-elite",
    "sbi-card-prime",
    "indigo-sbi-elite",
    "sbi-cashback",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "yes-reserv",
    "axis-airtel",
  ],
  "network-rupay": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
  "network-visa": [
    "hsbc-visa-platinum",
    "sc-priority-visa-infinite",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "indusind-eazydiner",
    "hdfc-regalia-gold",
    "phonepe-sbi-select-black",
    "kotak-solitaire",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "bobcard-etihad-guest-premium",
    "au-ixigo",
  ],
  "segment-beginner": [
    "au-ixigo",
    "indusind-eazydiner-platinum",
    "hdfc-diners-club-privilege",
    "amex-smartearn",
    "hsbc-live-plus",
    "hsbc-visa-platinum",
    "hdfc-shoppers-stop",
    "yes-kiwi",
    "sbi-cashback",
    "axis-airtel",
    "hdfc-swiggy-black",
    "rbl-platinum-delight",
  ],
  "segment-mid-premium": [
    "hdfc-regalia-gold",
    "indusind-eazydiner",
    "hsbc-travelone",
    "phonepe-sbi-select-black",
    "amex-membership-rewards",
    "hdfc-shoppers-stop-black",
    "bobcard-eterna",
    "hdfc-marriott-bonvoy",
    "amex-gold",
    "yes-marquee",
    "sbi-card-prime",
    "sbi-card-elite",
  ],
  "segment-premium": [
    "bobcard-etihad-guest-premium",
    "axis-indigo-premium",
    "amex-platinum-travel",
    "sc-ultimate",
    "equitas-powermiles",
    "krisflyer-sbi-apex",
    "aurum-sbi",
    "icici-adani-one-signature",
    "rbl-icon",
    "idfc-mayura",
    "indusind-celesta",
  ],
  "segment-super-premium": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus",
    "kotak-solitaire",
    "icici-times-black",
    "kotak-white-reserve",
    "sc-beyond",
    "axis-reserve",
    "amex-platinum-reserve",
  ],
  "spend-fuel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "indusind-eazydiner",
    "amex-platinum-travel",
    "kotak-solitaire",
    "sc-ultimate",
    "axis-magnus-burgundy",
    "phonepe-sbi-select-black",
  ],
  "spend-high-base": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "axis-magnus-burgundy",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "icici-times-black",
    "yes-marquee",
    "kotak-white-reserve",
  ],
  "spend-international": [
    "hsbc-premier",
    "bobcard-etihad-guest-premium",
    "equitas-powermiles",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "au-ixigo",
    "sc-ultimate",
    "hdfc-regalia-gold",
    "bobcard-eterna",
    "idfc-mayura",
    "icici-times-black",
    "rbl-world-safari",
  ],
  "spend-level-heavy": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "axis-magnus",
    "yes-marquee",
    "icici-times-black",
    "equitas-selfe",
  ],
  "spend-level-light": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-regalia-gold",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "kotak-solitaire",
    "indusind-eazydiner",
    "equitas-selfe",
    "sc-ultimate",
    "amex-platinum-travel",
  ],
  "spend-level-mid": [
    "hsbc-premier",
    "hdfc-diners-club-black-metal",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "hdfc-regalia-gold",
    "kotak-solitaire",
    "equitas-selfe",
    "axis-magnus",
    "yes-marquee",
    "bobcard-etihad-guest-premium",
  ],
  "spend-travel-heavy": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hdfc-diners-club-black-metal",
    "axis-magnus-burgundy",
    "hsbc-travelone",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-times-black",
    "sc-ultimate",
  ],
  "usecase-cashback": [
    "phonepe-sbi-select-black",
    "hsbc-live-plus",
    "hsbc-rupay-cashback",
    "sbi-cashback",
    "hdfc-phonepe-ultimo",
    "axis-airtel",
    "hdfc-swiggy-black",
    "hdfc-swiggy-orange",
    "axis-ace",
    "hdfc-millennia",
    "titan-sbi",
    "csb-jupiter-edge-plus",
  ],
  "usecase-dining": [
    "indusind-eazydiner",
    "indusind-eazydiner-platinum",
    "hsbc-live-plus",
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hdfc-marriott-bonvoy",
    "bobcard-eterna",
    "yes-first-preferred",
    "hsbc-rupay-cashback",
    "sbi-card-prime",
    "yes-paisabazaar-paisasave",
    "landmark-rewards-sbi-prime",
  ],
  "usecase-entertainment": [
    "indusind-eazydiner",
    "phonepe-sbi-select-black",
    "yes-marquee",
    "hdfc-diners-club-privilege",
    "hdfc-marriott-bonvoy",
    "yes-reserv",
    "sbi-card-prime",
    "sbi-card-elite",
    "bobcard-eterna",
    "hsbc-live-plus",
    "sbi-cashback",
    "phonepe-sbi-purple",
  ],
  "usecase-fuel": [
    "idfc-first-power-plus",
    "bpcl-sbi-octane",
    "axis-indianoil-easy",
    "axis-indianoil",
    "hdfc-indianoil",
    "idfc-first-power",
    "axis-indianoil-premium",
    "sc-platinum-rewards",
    "kotak-cashback-plus",
    "bpcl-sbi",
    "icici-hpcl-super-saver",
    "icici-hpcl-coral",
  ],
  "usecase-grocery": [
    "hdfc-swiggy-orange",
    "hdfc-swiggy-black",
    "hsbc-live-plus",
    "indusind-eazydiner",
    "sbi-card-prime",
    "au-ixigo",
    "bpcl-sbi-octane",
    "hdfc-moneyback-plus",
    "kotak-cashback-plus",
    "equitas-selfe",
    "rbl-platinum-maxima-plus",
    "rbl-shoprite",
  ],
  "usecase-online": [
    "phonepe-sbi-select-black",
    "indusind-eazydiner",
    "sbi-cashback",
    "bobcard-eterna",
    "csb-jupiter-edge-plus",
    "hdfc-pixel-play",
    "simplyclick-sbi",
    "axis-cashback",
    "yes-pop-club",
    "rbl-cookies",
    "phonepe-sbi-purple",
    "kotak-cashback-plus",
  ],
  "usecase-travel": [
    "hsbc-premier",
    "icici-emeralde-private-metal",
    "hdfc-infinia-metal",
    "hsbc-travelone",
    "axis-magnus-burgundy",
    "hdfc-diners-club-black-metal",
    "kotak-solitaire",
    "axis-magnus",
    "hdfc-regalia-gold",
    "bobcard-etihad-guest-premium",
    "icici-adani-one-signature",
    "hsbc-visa-platinum",
  ],
  "usecase-upi": [
    "au-ixigo",
    "yes-kiwi",
    "indigo-sbi-elite",
    "yes-pop-club",
    "yes-reserv",
    "hsbc-rupay-platinum",
    "indigo-sbi",
    "phonepe-sbi-select-black",
    "sbi-card-miles",
    "reliance-sbi-prime",
    "hdfc-tata-neu-infinity",
    "tata-neu-infinity-sbi",
  ],
}
`;

exports[`result split golden (all query modes) > snapshots section membership for every representative query under reward-type-split 1`] = `
{
  "broad-generic": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-bill-payments": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-education-payments": {
    "Cashback cards": [
      "hdfc-millennia",
      "titan-sbi",
      "hdfc-swiggy-black",
      "hdfc-pixel-play",
      "hdfc-pixel-go",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-rent": {
    "": [
      "hsbc-premier",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
      "axis-magnus-burgundy",
    ],
  },
  "category-rent-payment": {
    "": [
      "hsbc-premier",
      "amex-platinum-travel",
      "amex-membership-rewards",
      "sc-ultimate",
      "axis-magnus-burgundy",
    ],
  },
  "category-utilities": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-purple",
      "cheq-au",
      "axis-ace",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "category-utility-bills": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hdfc-phonepe-ultimo",
      "cheq-au",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "combo-dining-under-5000": {
    "Cashback cards": [
      "yes-paisabazaar-paisasave",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "indusind-eazydiner",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
    ],
  },
  "combo-premium-travel": {
    "": [
      "bobcard-etihad-guest-premium",
      "icici-adani-one-signature",
      "krisflyer-sbi-apex",
      "sc-ultimate",
      "amex-platinum-travel",
    ],
  },
  "exact-card-atlas": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-atlas",
      "axis-indigo-premium",
      "axis-horizon",
      "axis-magnus",
      "axis-magnus-burgundy",
    ],
  },
  "forex": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "titan-sbi",
      "hsbc-live-plus",
      "icici-amazon-pay",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
      "au-ixigo",
    ],
  },
  "forex-zero": {
    "": [
      "bobcard-etihad-guest-premium",
      "au-ixigo",
      "idfc-mayura",
      "rbl-world-safari",
      "idfc-wow",
    ],
  },
  "guest-lounge-query": {
    "": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "kotak-solitaire",
      "yes-marquee",
    ],
  },
  "intl-lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "axis-magnus",
      "yes-marquee",
      "kotak-solitaire",
      "kotak-white-reserve",
      "hdfc-diners-club-black-metal",
    ],
  },
  "issuer-amex": {
    "": [
      "amex-platinum-travel",
      "amex-gold",
      "amex-membership-rewards",
      "amex-platinum-reserve",
      "amex-smartearn",
    ],
  },
  "issuer-axis": {
    "Cashback cards": [
      "axis-airtel",
      "axis-ace",
      "axis-fibe",
      "axis-flipkart",
      "axis-samsung-signature",
    ],
    "Rewards cards": [
      "axis-magnus-burgundy",
      "axis-atlas",
      "axis-magnus",
      "axis-flipkart-super-elite",
      "axis-horizon",
    ],
  },
  "issuer-hdfc": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-black",
      "hdfc-swiggy-orange",
      "hdfc-phonepe-ultimo",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hdfc-diners-club-black-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "issuer-icici": {
    "Cashback cards": [
      "icici-amazon-pay",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "icici-times-black",
      "icici-adani-one-signature",
      "icici-adani-one-platinum",
      "icici-makemytrip",
      "icici-coral-rupay",
      "icici-sapphiro",
    ],
  },
  "issuer-sbi": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "phonepe-sbi-purple",
      "bpcl-sbi-octane",
      "titan-sbi",
    ],
    "Rewards cards": [
      "krisflyer-sbi-apex",
      "tata-neu-infinity-sbi",
      "indigo-sbi-elite",
      "aurum-sbi",
      "sbi-card-miles-elite",
    ],
  },
  "lifetime-free": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "yes-paisabazaar-paisasave-rupay",
      "au-ixigo",
    ],
    "Rewards cards": [
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
      "indusind-eazydiner-platinum",
    ],
  },
  "lounge": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-reserve",
    ],
  },
  "lounge-query": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "axis-magnus-burgundy",
      "kotak-white-reserve",
      "kotak-solitaire",
      "axis-magnus",
    ],
  },
  "max-fee-5000-query": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-travelone",
      "hdfc-regalia-gold",
      "equitas-selfe",
      "kotak-solitaire",
      "indusind-eazydiner",
    ],
  },
  "max-fee-zero": {
    "Cashback cards": [
      "yes-kiwi",
      "csb-jupiter-edge-plus",
      "axis-fibe",
      "icici-amazon-pay",
      "yes-paisabazaar-paisasave-rupay",
    ],
    "Rewards cards": [
      "kotak-solitaire",
      "hsbc-visa-platinum",
      "au-ixigo",
      "indusind-tiger",
      "hsbc-rupay-platinum",
    ],
  },
  "merchant-amazon": {
    "Cashback cards": [
      "icici-amazon-pay",
      "cheq-au",
    ],
    "Rewards cards": [
      "hdfc-moneyback-plus",
      "amex-smartearn",
    ],
  },
  "merchant-flipkart": {
    "Cashback cards": [
      "flipkart-sbi",
      "axis-flipkart",
      "axis-samsung-signature",
      "cheq-au",
    ],
    "Rewards cards": [
      "axis-flipkart-super-elite",
      "cheq-au",
      "axis-neo",
    ],
  },
  "merchant-swiggy": {
    "Cashback cards": [
      "hdfc-swiggy",
      "hdfc-swiggy-orange",
      "axis-fibe",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hdfc-diners-club-privilege",
      "axis-rewards",
      "axis-my-zone",
      "axis-select",
      "sc-digismart",
    ],
  },
  "network-mastercard": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "sbi-cashback",
      "axis-airtel",
      "hdfc-millennia",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "sc-ultimate",
      "sbi-card-elite",
    ],
  },
  "network-rupay": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
  "network-visa": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "axis-ace",
      "phonepe-sbi-purple",
    ],
    "Rewards cards": [
      "icici-emeralde-private-metal",
      "indusind-eazydiner",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "kotak-solitaire",
    ],
  },
  "segment-beginner": {
    "Cashback cards": [
      "hsbc-live-plus",
      "axis-airtel",
      "hdfc-swiggy-orange",
      "yes-kiwi",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indusind-eazydiner-platinum",
      "hdfc-diners-club-privilege",
      "amex-smartearn",
      "hdfc-shoppers-stop",
    ],
  },
  "segment-mid-premium": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "bpcl-sbi-octane",
      "apollo-sbi-select",
      "rbl-patanjali-swarn",
    ],
    "Rewards cards": [
      "indusind-eazydiner",
      "hdfc-regalia-gold",
      "hsbc-travelone",
      "amex-membership-rewards",
      "hdfc-shoppers-stop-black",
    ],
  },
  "segment-premium": {
    "": [
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
      "sc-ultimate",
    ],
  },
  "segment-super-premium": {
    "": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-fuel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-airtel",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
      "hsbc-travelone",
    ],
  },
  "spend-high-base": {
    "Cashback cards": [
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "axis-magnus-burgundy",
      "hdfc-infinia-metal",
    ],
  },
  "spend-international": {
    "Cashback cards": [
      "csb-jupiter-edge-plus",
      "titan-sbi",
      "hsbc-live-plus",
      "icici-amazon-pay",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "bobcard-etihad-guest-premium",
      "equitas-powermiles",
      "icici-emeralde-private-metal",
      "au-ixigo",
    ],
  },
  "spend-level-heavy": {
    "Cashback cards": [
      "hsbc-rupay-cashback",
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hdfc-phonepe-ultimo",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
    ],
  },
  "spend-level-light": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "yes-kiwi",
      "sbi-cashback",
      "hsbc-live-plus",
      "axis-airtel",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-regalia-gold",
    ],
  },
  "spend-level-mid": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hsbc-rupay-cashback",
      "sbi-cashback",
      "hdfc-phonepe-ultimo",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "axis-magnus-burgundy",
    ],
  },
  "spend-travel-heavy": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "titan-sbi",
      "hsbc-rupay-cashback",
      "hdfc-phonepe-ultimo",
      "axis-ace",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hdfc-diners-club-black-metal",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-cashback": {
    "": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "axis-airtel",
    ],
  },
  "usecase-dining": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "yes-paisabazaar-paisasave",
      "hsbc-live-plus",
      "axis-fibe",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "indusind-eazydiner",
      "rbl-platinum-maxima-plus",
      "hdfc-marriott-bonvoy",
    ],
  },
  "usecase-entertainment": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "sbi-cashback",
      "hsbc-rupay-cashback",
      "csb-jupiter-edge-plus",
    ],
    "Rewards cards": [
      "cheq-au",
      "indusind-eazydiner",
      "yes-marquee",
      "hdfc-diners-club-privilege",
      "hdfc-marriott-bonvoy",
    ],
  },
  "usecase-fuel": {
    "Cashback cards": [
      "bpcl-sbi-octane",
      "kotak-cashback-plus",
      "bpcl-sbi",
      "icici-hpcl-super-saver",
      "icici-hpcl-coral",
    ],
    "Rewards cards": [
      "idfc-indigo",
      "sc-platinum-rewards",
      "idfc-first-power-plus",
      "hdfc-indianoil",
      "axis-indianoil-premium",
    ],
  },
  "usecase-grocery": {
    "Cashback cards": [
      "hdfc-swiggy-orange",
      "hdfc-swiggy-black",
      "hsbc-live-plus",
      "bpcl-sbi-octane",
      "phonepe-sbi-select-black",
    ],
    "Rewards cards": [
      "equitas-selfe",
      "sbi-card-elite",
      "rbl-platinum-maxima-plus",
      "indusind-eazydiner",
      "yes-marquee",
    ],
  },
  "usecase-online": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "cub-salaryse-level-up",
      "simplyclick-sbi",
    ],
  },
  "usecase-travel": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "axis-fibe",
      "apollo-sbi-select",
      "titan-sbi",
      "hsbc-live-plus",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
      "axis-magnus-burgundy",
    ],
  },
  "usecase-upi": {
    "Cashback cards": [
      "yes-kiwi",
      "phonepe-sbi-select-black",
      "phonepe-sbi-purple",
      "hsbc-rupay-cashback",
      "axis-fibe",
    ],
    "Rewards cards": [
      "au-ixigo",
      "indigo-sbi-elite",
      "yes-pop-club",
      "hsbc-rupay-platinum",
      "yes-reserv",
    ],
  },
}
`;

exports[`result split golden (reward-type-split) > snapshots the section membership and order for broad queries 1`] = `
{
  "broad-best-card": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
  "category-online-split": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "sbi-cashback",
      "csb-jupiter-edge-plus",
      "hdfc-pixel-play",
      "axis-cashback",
    ],
    "Rewards cards": [
      "yes-marquee",
      "indusind-eazydiner",
      "yes-pop-club",
      "cub-salaryse-level-up",
      "simplyclick-sbi",
    ],
  },
  "premium-degrade-single": {
    "": [
      "bobcard-etihad-guest-premium",
      "amex-platinum-travel",
      "equitas-powermiles",
      "krisflyer-sbi-apex",
      "sc-ultimate",
    ],
  },
  "seo-broad-best-cards": {
    "Cashback cards": [
      "phonepe-sbi-select-black",
      "hsbc-live-plus",
      "yes-kiwi",
      "sbi-cashback",
      "hdfc-swiggy-black",
    ],
    "Rewards cards": [
      "hsbc-premier",
      "hdfc-diners-club-black-metal",
      "icici-emeralde-private-metal",
      "hdfc-infinia-metal",
      "hsbc-travelone",
    ],
  },
}
`;
